# high-school

./: .gitignore  README.md
ISNgame/: LICENSE  game.py  main.ps  main.py  networkthread.py  objet.py  physicsthread.py  player.py  rectangle.py  renderthread.py  server.py  stepdebug.py  unit.py
ISNgame/resources/assets/minecraft/textures/gui/: widgets.pdn
ISNgame/resources/assets/optifine/sky/world0/: sky4.properties  sky7.properties
ISNgame/saves/: 4436727.json  476266.json  5296900.json  5580256.json  5727221.json  5868197.json  6263423.json  8328784.json  9857931.json  default.json  new.json
WIPMod/java/cf/jeanbisel/wipmod/: WIPBiome.java  WIPMod.java  WIPTeleporter.java  WorldProviderWIP.java
WIPMod/java/cf/jeanbisel/wipmod/blocks/: BlockTest.java  WIPDirt.java  WIPGrass.java  WIPStone.java
WIPMod/resources/: mcmod.info  pack.mcmeta
WIPMod/resources/assets/wipmod/blockstates/: blocktest.json  wipdirt.json  wipgrass.json  wipstone.json
WIPMod/resources/assets/wipmod/lang/: en_us.lang  fr_fr.lang
WIPMod/resources/assets/wipmod/models/item/: blocktest.json  wipdirt.json  wipgrass.json  wipstone.json
WIPMod/resources/assets/wipmod/recipes/: blocktest.json
conway/: cellular.hpp  main.cpp  meson.build
engine/: TODO  meson.build
engine/games/default/: autorun.cfg
engine/games/default/assets/models/: sol.mtl  untitled.blend  untitled.mtl  x-35_obj.mtl
engine/games/default/assets/models/ta/: TableClock.mtl
engine/games/default/assets/shaders/: model.frag  model.vert
engine/games/default/assets/textures/: .directory
engine/games/default/lua/: map.lua  plane.lua  player.lua
engine/include/: GL.h  entity.h  eventListener.h  global.h  init.h  luafunc.h  mesh.h  misc.h  model.h  shell.h  terrain.h  terrainloader.h
engine/src/: GL.cpp  entity.cpp  eventListener.cpp  game.cpp  global.cpp  init.cpp  luafunc.cpp  main.cpp  mesh.cpp  misc.cpp  model.cpp  render.cpp  shell.cpp  terrain.cpp  terrainloader.cpp
game/: Makefile  README.txt  jeu_linux  jeu_linux.sh  main.cpp  map.cpp  menu.cpp  misc.cpp  personnage.cpp  physics.cpp  render.cpp
game/maps/: WIP.txtmap  map.txtmap  map2.txtmap  maps.list  null.txtmap
markov/: example-output  input  main.py
markov/gtk-markov/: main.py
miamd/: README  meson.build  miam.conf
miamd/headers/: GL.h  audio.h  game.h  global.h  icon.h  init.h  render.h
miamd/src/: GL.cpp  audio.cpp  game.cpp  init.cpp  render.cpp
miamd/src/client/: main.cpp
miamd/src/daemon/: audio.cpp  game.cpp  global.cpp  init.cpp  main.cpp  render.cpp
pong/: Makefile  main.cpp  pong
shadowcasting/: Makefile  line.cpp  line.h  main.cpp  main.py  ray.cpp  ray.h  rect.cpp  rect.h  vertex.cpp  vertex.h
theshell/: meson.build  theshell.cpp
